Configuraciones/Azure/KNative/service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: feheroes-svc
  namespace: heroes-kn-ns
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          serviceAccountName: build-bot
          container:
            name: feheroes
            image: egsmcontenedor.azurecr.io/fehello-jib:0.0.2-SNAPSHOT
            env:
            - name: svc
              value: "http://heroes-svc.heroes-kn-ns"
            imagePullPolicy: Always
            ports:
              - containerPort: 8085
